--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
     <section id="menu" class="menu-section">
         <h2>Our Menu</h2>
         <div class="menu-item">
-            <img src="image/dish1.jpg" alt="Dish 1">
+            <img src="dish1.jpg" alt="Dish 1">
             <h3>Chicken khana set</h3>
             <p>Description of Dish 1.</p>
             <p>Price: Rs.300</p>
         </div>
         <div class="menu-item">
-            <img src="image/dish2.jpg" alt="Dish 2">
+            <img src="dish2.jpg" alt="Dish 2">
             <h3>Chicken roti set</h3>
             <p>Description of Dish 2.</p>
             <p>Price: Rs.300</p>
