--- a/rooms.html
+++ b/rooms.html
@@ -32,19 +32,19 @@
         <!-- Room Images Gallery -->
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1em;">
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="image/Room 1.jpg" alt="Room 1" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Room 1.jpg" alt="Room 1" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="image/Room 2.jpg" alt="Room 2" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Room 2.jpg" alt="Room 2" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="image/Room 3.jpg" alt="Room 3" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Room 3.jpg" alt="Room 3" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="image/Room 5.jpg" alt="Room 4" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Room 5.jpg" alt="Room 4" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="image/Room 4.jpg" alt="Room 5" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Room 4.jpg" alt="Room 5" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
         </div>
     </section>
