--- a/gallery.html
+++ b/gallery.html
@@ -32,25 +32,25 @@
         <!-- Images Gallery -->
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1em;">
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/lodge.jpg" alt="Lodge" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="lodge.jpg" alt="Lodge" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/Outside.jpg" alt="Outside" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Outside.jpg" alt="Outside" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/parking.jpg" alt="Parking Area" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="parking.jpg" alt="Parking Area" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/Fish.jpg" alt="Fish Pond" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="Fish.jpg" alt="Fish Pond" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/hall.jpg" alt="Hall" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="hall.jpg" alt="Hall" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/view 1.jpg" alt="Scenic View 1" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="view 1.jpg" alt="Scenic View 1" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
             <div style="position: relative; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <img src="/image/view 2.jpg" alt="Scenic View 2" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
+                <img src="view 2.jpg" alt="Scenic View 2" style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.3s ease;">
             </div>
         </div>
     </section>
